# magnum-neovim-api

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_bindings.py  start-neovim.bat
src/: CMakeLists.txt
src/Corrade/Net/: CMakeLists.txt  Socket.cpp  Socket.h
src/NeovimUi/: CMakeLists.txt  NeovimUi.cpp
src/Test/: CMakeLists.txt  NeoVimApiTest.cpp
template/: neovimapi.cpp  neovimapi.h
